--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html{
-    height:100%;
+    height:auto;
     width:auto;
     background-color: bisque;
-    border: 10px solid rgb(213, 232, 75);
+    border: 120px solid rgb(213, 232, 75);
 }
 
 .container{
@@ -24,6 +24,10 @@ html{
 }
 
 .image_fit{
+    width:100%;
+}
+
+.image_fitted{
     width:100%;
 }
 
@@ -61,6 +65,12 @@ a:hover{
     display:inline;
 }
 
+.button_web_design{
+    border-radius: 10px;
+    background-color: orange;
+    margin-bottom:10px;
+}
+
 .centered_content{
     text-align: center;
 }
@@ -75,24 +85,27 @@ a:hover{
     grid-column: 1 / span 1;
     grid-row:4;
     background-color: aqua;
+    text-align: center;
 }
 
 .content_boxed_two{
     grid-column: 2 / span 1;
     grid-row:4;
     background-color: aqua;
+    text-align: center;
 }
 
 .content_boxed_three{
     grid-column: 3 / span 1;
     grid-row:4;
     background-color: aqua;
+    text-align: center;
 }
 
 .content_boxed_four{
     grid-column: 1 / span 1;
     grid-row:5;
-    background-color: aquamarine;
+    background-color: rgb(33, 23, 185);
 }
 .content_boxed_five{
     grid-column: 2 / span 1;
@@ -102,7 +115,7 @@ a:hover{
 .content_boxed_five_plus_one{
     grid-column: 3 / span 1;
     grid-row:5;
-    background-color: aquamarine;
+    background-color: rgb(155, 127, 255);
 }
 
 .footer{
