--- a/style.css
+++ b/style.css
@@ -155,9 +155,8 @@ a:hover {
         margin-bottom: none;
     }
 
-    .content_boxed_three{
-        display:none;
-    }
+    /*To make sure that I can remake the entire layout I will use CSS and restructure the Grid*/
+    
 
 }
 
